--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -56,12 +56,24 @@
                 <ImageView
                     android:id="@+id/product_cart"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentEnd="true"
+                    android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginEnd="-10dp"
+                    android:layout_toStartOf="@+id/cart_counter"
                     android:contentDescription="@string/view_cart"
                     android:src="@drawable/ic_cart" />
+
+                <TextView
+                    android:id="@+id/cart_counter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@+id/product_cart"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/default_count"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:background="@drawable/rounded_textview"/>
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
