--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,20 +24,33 @@
 
                 <ImageView
                     android:id="@+id/logo"
-                    android:src="@drawable/logo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
                     android:layout_toStartOf="@+id/cart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:src="@drawable/logo" />
 
                 <ImageView
                     android:id="@+id/cart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="-10dp"
+                    android:layout_toStartOf="@+id/cart_counter"
+                    android:contentDescription="@string/view_cart"
+                    android:src="@drawable/ic_cart" />
+
+                <TextView
+                    android:id="@+id/cart_counter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/cart"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="10dp"
-                    android:src="@drawable/ic_cart"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
+                    android:background="@drawable/rounded_textview"
+                    android:text="@string/default_count"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white" />
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
